Update guidlines